# claude-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  start.sh
docs/: design.md
src/: lib.rs  main.rs  monitor.rs  parser.rs  security.rs  server.rs  state.rs
static/: app.js  index.html  react-bridge.js  style.css
tests/: integration.rs
tests/fixtures/: idle.jsonl  needs_permission.jsonl  running.jsonl  waiting_for_user.jsonl
