[package]
name = "claude-checker"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
description = "Local kanban dashboard for Claude Code session progress"
license = "MIT"
repository = "https://github.com/howlrs/claude-checker"

[[bin]]
name = "claude-checker"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6", features = ["set-header", "trace"] }
tower = "0.5"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
include_dir = "0.7"
mime_guess = "2.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
regex = "1.11"
once_cell = "1.20"
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
dirs = "5.0"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
tempfile = "3.13"
tokio = { version = "1.52", features = ["full", "test-util"] }
eventsource-stream = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
